ui fix for twenty nineteen theme (#90)
* Popup layout correction if default box-sizing is not border-box

* added height to avoid overlapping scroll bar

* UI fix for twenty nineteen theme

* spacing provided

--- a/public/css/gdpr-cookie-consent-public.css
+++ b/public/css/gdpr-cookie-consent-public.css
@@ -563,6 +563,12 @@ Bootstrap CSS for frontend UI
 	}
 }
 
+@media (min-width: 768px) {
+	.gdprmodal-dialog-centered .gdprmodal-content {
+		min-width: 550px;
+	}
+}
+
 @media (min-width: 992px) {
 	.gdprmodal-lg,
 	.gdprmodal-xl {
